tasks/t0002_literature_survey_dsgc_compartmental_models/logs/commands/045_20260418T234636Z_uv-run-python.stderr.txt
  File "<string>", line 13
    '# The Mechanism of Directionally Selective Units in Rabbit'\''s Retina',
                                                                 ^
SyntaxError: unexpected character after line continuation character
